# XEngine

./: .gitignore  CMakeLists.txt  README.md
Demo/Server/: CMakeLists.txt
Demo/Server/XGame/: CMakeLists.txt
Demo/Server/XGame/Backpack/: Backpack.cpp  Backpack.h  BackpackMatrix.h  CMakeLists.txt  DllExport.cpp  Header.h
Demo/Server/XGame/BossManager/: BossManager.cpp  BossManager.h  CMakeLists.txt  DllExport.cpp  Header.h  HydraCypress.cpp  HydraCypress.h
Demo/Server/XGame/BuffManager/: BuffManager.cpp  BuffManager.h  CMakeLists.txt  DllExport.cpp  Header.h
Demo/Server/XGame/Cache/: AccountCache.cpp  AccountCache.h  CMakeLists.txt  Cache.cpp  Cache.h  DllExport.cpp  Header.h
Demo/Server/XGame/CacheClient/: CMakeLists.txt  CacheClient.cpp  CacheClient.h  DllExport.cpp  Header.h
Demo/Server/XGame/CharacterManager/: CMakeLists.txt  CharacterDocker.cpp  CharacterDocker.h  CharacterManager.cpp  CharacterManager.h  DllExport.cpp  Header.h
Demo/Server/XGame/Combat/: CMakeLists.txt  Combat.cpp  Combat.h  DllExport.cpp  Header.h
Demo/Server/XGame/Common/: RedisDef.h
Demo/Server/XGame/Config/: AutoConfigData.cpp  AutoConfigData.h  CMakeLists.txt  Config.cpp  Config.h  DllExport.cpp  Header.h
Demo/Server/XGame/Db/: CMakeLists.txt  Db.cpp  Db.h  DbGroup.cpp  DbGroup.h  DllExport.cpp  Header.h
Demo/Server/XGame/Fsm/: CMakeLists.txt  DllExport.cpp  Fsm.cpp  Fsm.h  Header.h
Demo/Server/XGame/Game/: CMakeLists.txt  DllExport.cpp  Game.cpp  Game.h  Header.h
Demo/Server/XGame/GameEntitySync/: CMakeLists.txt  DllExport.cpp  (+3 more)
Demo/Server/XRobot/: CMakeLists.txt
Demo/Server/XTests/: CMakeLists.txt
Demo/Server/XTools/: CMakeLists.txt
Demo/Test001/: CMakeLists.txt  DllExport.cpp  Header.h  Test001.cpp  Test001.h
Demo/TestPhysics/: CMakeLists.txt  DllExport.cpp  Header.h  TestPhysics.cpp  TestPhysics.h
Engine/: CMakeLists.txt  Engine.cpp  Engine.h  Launch.cpp  main.cpp
Engine/Component/Fbxer/: Fbxer.cpp  Fbxer.h  Header.h
Engine/Component/Http/: Downloader.cpp  Downloader.h  Header.h  Http.cpp  Http.h  Request.cpp  Request.h
Engine/Component/Log/: Header.h  Log.cpp  Log.h
Engine/Component/Logic/: Header.h  Logic.cpp  Logic.h
Engine/Component/MeshLoader/: Header.h  MeshLoader.cpp  MeshLoader.h
Engine/Component/Navigation/: Header.h  Navigation.cpp  Navigation.h  Navmesh.cpp  Navmesh.h
Engine/Component/Physics/: Header.h  Physics.cpp  Physics.h  PhysxScene.cpp  PhysxScene.h  TriangleMeshActor.cpp  TriangleMeshActor.h
Engine/Component/TimeWheel/: Header.h  TimeBase.cpp  TimeBase.h  TimeBaseList.cpp  TimeBaseList.h  TimeGear.cpp  TimeGear.h  TimeWheel.cpp  TimeWheel.h
Engine/Component/XZip/: Header.h  XZip.cpp  XZip.h
Engine/Interface/: iEngineComponent.h  iFbxer.h  iHttp.h  iLog.h  iLogic.h  iMeshLoader.h  iNavigation.h  iPhysics.h  iTimeWheel.h
Server/: .gitignore  CMakeLists.txt
Server/Documents/: 设计稿.xmind
Server/XEngine/: CMakeLists.txt
Server/XEngine/Api/: MultiSys.h  iEngine.h  iGameObjectApi.h  iModule.h  iPhysicsApi.h  iTimerApi.h
Server/XEngine/Engine/: CMakeLists.txt  Engine.cpp  Engine.h
Server/XEngine/Utils/: SafeQueue.h  SafeString.h  SafeSystem.cpp  SafeSystem.h  SafeThread.cpp  SafeThread.h  SafeTools.h  X3DObj.cpp  X3DObj.h  XBuffer.h  XFile.h  XLock.h  XPool.h
Server/XGame/: CMakeLists.txt
Server/XGame/Arch/: CMakeLists.txt
Server/XGame/Components/: CMakeLists.txt
Server/XGame/Interface/: iBalance.h  iCache.h  iConnecter.h  iGameServer.h  iGate.h  iLobby.h  iMaster.h  iMonitor.h  iRedis.h  iSession.h  iTestNewCmakeLists.h
Server/XGame/Node/: CMakeLists.txt
Server/XGame/Proto/: Architecture.pb.h
Server/XGame/Tests/: CMakeLists.txt
Server/XGame/Tools/: CMakeLists.txt
XEngine/: .gitignore  CMakeLists.txt  EngineSourceGroup.cmake
XEngine/Api/: MultiSys.cpp  MultiSys.h  iComponent.h  iEngine.h  iGameObject.h  iGameObjectApi.h  iHttpApi.h  iMemoryApi.h  iModule.h  iMysqlApi.h  iNavigationApi.h  iNetApi.h  iPhysicsApi.h  iRedisApi.h  iTaskApi.h  iTimerApi.h  iWebSocketsApi.h  iZipApi.h
XEngine/Demo/: CMakeLists.txt  ModuleCreate.bat
XEngine/Demo/Common/: RemoteProto.h
XEngine/Demo/HelloWorld/: CMakeLists.txt  DllExport.cpp  Header.h  HelloWorld.cpp
XEngine/Demo/Interface/: GameObjectTemplate.h  iGameObjectManager.h  iGameObjectTest.h  iHelloWorld.h  iObjLoader.h  iSession.h  iTestNet.h  iTestNewCmakeLists.h
XEngine/Demo/ModuleCreator/: CMakeLists.txt  Template.h  main.cpp
XEngine/Demo/ObjLoader/: CMakeLists.txt  DllExport.cpp  ObjLoader.cpp  ObjLoader.h
XEngine/Demo/Proto/: Architecture.pb.cc
XEngine/Demo/RemoteAgent/: CMakeLists.txt  DllExport.cpp  Header.h  MstscConnection.cpp  MstscConnection.h  RemoteAgent.cpp  RemoteAgent.h  ServerConnection.cpp  ServerConnection.h
XEngine/Demo/RemoteServer/: AgentConnection.cpp  AgentConnection.h  CMakeLists.txt  DllExport.cpp  Header.h  RemoteServer.cpp  RemoteServer.h  UserConnection.cpp  UserConnection.h
XEngine/Demo/Test001/: CMakeLists.txt  Header.h  Test001.h
XEngine/Demo/TestPhysics/: CMakeLists.txt  Header.h  TestPhysics.cpp
XEngine/Documents/: 设计稿--初稿.vsdx
XEngine/Engine/: CMakeLists.txt  Engine.cpp  Engine.h  Launch.cpp  Launch.h  main.cpp
XEngine/Engine/Interface/: iEngineComponent.h  iLog.h  iLogic.h  iMemory.h  iMysql.h  iNet.h  iPhysics.h  iRedis.h  iTaskManager.h  iTimeWheel.h  iWebSockets.h  iXZip.h
XEngine/Utils/: CommonQueue.h  SafeArray.h  SafeBit.h  SafeMemory.h  SafeQueue.h  SafeString-Linux.cpp  SafeString-Windows.cpp  SafeString.h  SafeSystem.cpp  SafeSystem.h  SafeThread.cpp  SafeThread.h  SafeTools.cpp  SafeTools.h  X3DObj.cpp  X3DObj.h  XAOI.h  XAStar.h  XBase64.h  XBuffer.h  XDumper.cpp  XDumper.h  XEventPool.h  XFile.cpp  XFile.h  XLock.h  XPool.h  XUUID.h
XEngine/Utils/Excel/: book.hpp  compoundfile.hpp  compoundfile_exceptions.hpp  formula.hpp  msat.hpp  record.hpp  sat.hpp  sheet.hpp  sst.hpp  stream.hpp  utils.hpp
XEngine/Utils/Geometry/: Geometry.h  GeometryUtils.h  Quaternion.cpp  Quaternion.h  Vector.cpp  Vector.h  Vector2.h  Vector3.cpp  Vector3.h
XEngine/Utils/TinyXML/: tinyxml2.cpp  tinyxml2.h
(+3287 files in other folders)
