include_directories(
    "${CMAKE_CURRENT_SOURCE_DIR}/Common"
    "${CMAKE_CURRENT_SOURCE_DIR}/Interface"
)

set(Interface
    "${CMAKE_CURRENT_SOURCE_DIR}/Interface/iObjLoader.h"
)

#Tools
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/RemoteAgent)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/RemoteServer)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/ModuleCreator)

#Modules
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Test001)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/TestPhysics)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/ObjLoader)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/HelloWorld)