include_directories(
    "${CMAKE_CURRENT_SOURCE_DIR}/Common"
    "${CMAKE_CURRENT_SOURCE_DIR}/Interface"
)

set(Interface
    "${CMAKE_CURRENT_SOURCE_DIR}/Interface/iObjLoader.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/Interface/iGameObjectManager.h"
)

#Tools
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Tools/RemoteAgent)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Tools/RemoteServer)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Tools/ModuleCreator)

#Tests
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Tests/Test001)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Tests/TestPhysics)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Tests/HelloWorld)

#Components
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Components/ObjLoader)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Components/GameObjectManager)